--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "csv-parser": "^2.3.2",
+    "csv-writer": "^1.5.0",
     "yargs": "^14.2.0"
   }
 }
